--- a/main.tex
+++ b/main.tex
@@ -209,8 +209,9 @@
 \input{lec4}
 \input{lec5}
 \section*{Acknowledgments}
-It is normal for authors to accept responsibility for any and all
-mistakes in documents like these. I, however, do not. If you find
-anything amiss, please let me know so I can figure out who of the following
-are to blame: Amal Ahmed, Morten Krogh-Jespersen or Kristoffer Just Andersen.
+It is established practice for authors to accept responsibility for
+any and all mistakes in documents like this. I, however, do not. If
+you find anything amiss, please let me know so I can figure out who of
+the following are to blame: Amal Ahmed, Morten Krogh-Jespersen or
+Kristoffer Just Andersen.
 \end{document}
